--- a/product-api/package.json
+++ b/product-api/package.json
@@ -14,17 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@electric-sql/pglite": "^0.3.10",
-    "@prisma/adapter-pg": "^6.17.1",
     "@prisma/client": "^6.17.1",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "prisma": "^6.17.1"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.1",
+    "prisma": "^6.17.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
