--- a/ssr-nextjs/package.json
+++ b/ssr-nextjs/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "profiler": "next build --profile",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@electric-sql/pglite": "^0.3.10",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
